# datarize

./: Makefile  README.md  commitlint.config.js  pyproject.toml
.github/: CODEOWNERS
.github/workflow/: docs.yml  dummy_test.yml  release.yml  staging.yml  test.yml
.github/workflows/: docs.yml  staging.yml
