[tool.poetry]
name = "repo-template"
version = "0.1.0"
description = "A repository template to be used"
authors = ["Melvin Low <la0bing07148@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "repo_template"}]

[tool.poetry.dependencies]
python = "^3.7"
pre-commit = "^2.20.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 88

[tool.black]
target-version = ["py37", "py38", "py39"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
